spade-tests/src/snapshots/spade_tests__typeinference__wal_trace_clk_must_be_clock.snap
---
source: spade-tests/src/typeinference.rs
---
#[wal_traceable(suffix = __)]
struct T {}
fn test(t: T, x: bool) -> bool {
    #[wal_trace(clk=x)]
    let t = t;
    false
}


error: Unknown attribute 'wal_traceable'
  ┌─ testinput:1:3
  │
1 │ #[wal_traceable(suffix = __)]
  │   ^^^^^^^^^^^^^ Unrecognised attribute

error: Unknown attribute 'wal_trace'
  ┌─ testinput:4:7
  │
4 │     #[wal_trace(clk=x)]
  │       ^^^^^^^^^ Unrecognised attribute
